# git-calendar

./: .gitignore  Makefile  README.md  action.yml  body.html  build.py  build.sh  example.Europe-Helsinki.ics  example.Europe-Stockholm.ics  example.ics  example.ics.Europe-Helsinki.txt  example.ics.Europe-Stockholm.txt  index.html  index.html.j2  pyproject.toml  requirements.txt  single-event.Europe-Helsinki.ics  single-event.Europe-Stockholm.ics  single-event.ics  single-event.ics.Europe-Helsinki.txt  single-event.ics.Europe-Stockholm.txt  test-include.Europe-Helsinki.ics  test-include.Europe-Stockholm.ics  test-include.ics  test-include.ics.Europe-Helsinki.txt  test-include.ics.Europe-Stockholm.txt
.github/workflows/: calendar.yml
calendars/: _config.yaml  example.yaml  single-event.yaml  test-include.yaml
git_calendar/: __init__.py  build.py  yaml2ics.py
git_calendar/templates/: body.j2.html  content.j2.html  index.html.j2  index.j2.html
