[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "git_calendar"
authors = [{name = "Richard Darst"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    #"yaml2ics",
    "yaml2ics @ https://github.com/scientific-python/yaml2ics/archive/refs/heads/main.zip",
    "jinja2",
    "mutt-ics",
    "pyyaml",
    "markdown-it-py",
    # TODO: how to install from github here?  Then remove this
    # from requirements.txt
    "ics @ https://github.com/ics-py/ics-py/archive/refs/heads/main.zip",
]

[project.scripts]
git-calendar = "git_calendar.build:main"

[project.urls]
Home = "https://github.com/coderefinery/git-calendar"
